// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > should accumulate multiple headers 1`] = `
[
  {
    "headerName": "x-user-id",
    "key": "userId",
  },
  {
    "headerName": "x-trace-id",
    "key": "traceId",
  },
]
`;

exports[`Header > should stage header with explicit name 1`] = `
[
  {
    "headerName": "x-user-id",
    "key": "userId",
  },
]
`;
